--- a/FeelFlowAnalysis/FeelFlowAnalysis.csproj
+++ b/FeelFlowAnalysis/FeelFlowAnalysis.csproj
@@ -6,4 +6,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Scripts\" />
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
