--- a/FeelFlowAnalysis/FeelFlowAnalysis.csproj
+++ b/FeelFlowAnalysis/FeelFlowAnalysis.csproj
@@ -8,7 +8,10 @@
 
   <ItemGroup>
     <Folder Include="Scripts\" />
-    <Folder Include="Services\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MongoDB.Driver.Core" Version="2.24.0" />
   </ItemGroup>
 
 </Project>
