--- a/FeelFlowAnalysis/appsettings.json
+++ b/FeelFlowAnalysis/appsettings.json
@@ -1,9 +1,18 @@
 {
+  "AllowedHosts": "*",
+  "EncryptionSettings": {
+		"EncryptionKey": "7wt1dKUHAqe+KBA5sA6O1pgD5uN65EOIC8F54vE0Abs=",
+		"InitializationVector": "cy/U1sSrODwfEWpe4D6gPw=="
+	},
+	"HashingSettings": {
+		"SaltSize": 16,
+		"HashSize": 32,
+		"Iterations": 10000
+	},
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  },
-  "AllowedHosts": "*"
+  }
 }
