Add user service

--- a/FeelFlowAnalysis/appsettings.json
+++ b/FeelFlowAnalysis/appsettings.json
@@ -1,14 +1,19 @@
 {
   "AllowedHosts": "*",
   "EncryptionSettings": {
-		"EncryptionKey": "7wt1dKUHAqe+KBA5sA6O1pgD5uN65EOIC8F54vE0Abs=",
-		"InitializationVector": "cy/U1sSrODwfEWpe4D6gPw=="
-	},
-	"HashingSettings": {
-		"SaltSize": 16,
-		"HashSize": 32,
-		"Iterations": 10000
-	},
+    "EncryptionKey": "7wt1dKUHAqe+KBA5sA6O1pgD5uN65EOIC8F54vE0Abs=",
+    "InitializationVector": "cy/U1sSrODwfEWpe4D6gPw=="
+  },
+  "DbSettings": {
+    "ConnectionString": "",
+    "DatabaseName": "FeelFlowDb",
+    "UsersCollectionName": "Users"
+  },
+  "HashingSettings": {
+    "SaltSize": 16,
+    "HashSize": 32,
+    "Iterations": 10000
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
