added all the basic initial mechanics and basic layout

--- a/FeelFlowAnalysis/FeelFlowAnalysis.csproj
+++ b/FeelFlowAnalysis/FeelFlowAnalysis.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <Folder Include="Scripts\" />
     <Folder Include="Services\" />
+    <Folder Include="wwwroot\Scripts\" />
   </ItemGroup>
 
 </Project>
