Fix nav-menu & add LogIn and SignUp for users

--- a/FeelFlowAnalysis/appsettings.json
+++ b/FeelFlowAnalysis/appsettings.json
@@ -5,7 +5,7 @@
     "InitializationVector": "cy/U1sSrODwfEWpe4D6gPw=="
   },
   "DbSettings": {
-    "ConnectionString": "",
+    "ConnectionString": "mongodb+srv://WinstonExe:98hudzKPeCwR1LXM@cluster0.o8zm9ny.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0",
     "DatabaseName": "FeelFlowDb",
     "UsersCollectionName": "Users"
   },
