--- a/FeelFlowAnalysis/FeelFlowAnalysis.csproj
+++ b/FeelFlowAnalysis/FeelFlowAnalysis.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="MongoDB.Driver" Version="2.24.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\API\Analyze\" />
+  </ItemGroup>
+
 </Project>
