Add user permissions and db connection

--- a/FeelFlowAnalysis/appsettings.json
+++ b/FeelFlowAnalysis/appsettings.json
@@ -5,7 +5,7 @@
     "InitializationVector": "cy/U1sSrODwfEWpe4D6gPw=="
   },
   "DbSettings": {
-    "ConnectionString": "mongodb+srv://WinstonExe:98hudzKPeCwR1LXM@cluster0.o8zm9ny.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0",
+    "ConnectionString": "mongodb+srv://morgun2282:c8vnCi2tw5kRbA30@feelflowdb.kl6d8vi.mongodb.net/",
     "DatabaseName": "FeelFlowDb",
     "UsersCollectionName": "Users"
   },
