--- a/FeelFlowAnalysis/FeelFlowAnalysis.csproj
+++ b/FeelFlowAnalysis/FeelFlowAnalysis.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="MongoDB.Driver" Version="2.24.0" />
+    <PackageReference Include="Stripe.net" Version="43.19.0" />
   </ItemGroup>
   
 </Project>
