--- a/FeelFlowAnalysis/appsettings.json
+++ b/FeelFlowAnalysis/appsettings.json
@@ -1,5 +1,11 @@
 {
   "AllowedHosts": "*",
+  "ApiSettings": {
+    "ApiUrl": "http://127.0.0.1:8000",
+    "Analyze": "/analyze",
+    "Metadata": "/metadata",
+    "Verify": "/verify"
+  },
   "EncryptionSettings": {
     "EncryptionKey": "7wt1dKUHAqe+KBA5sA6O1pgD5uN65EOIC8F54vE0Abs=",
     "InitializationVector": "cy/U1sSrODwfEWpe4D6gPw=="
