Add Settings.cs to configure app settings, fix deserialization bug, fix imports

--- a/FeelFlowAnalysis/appsettings.json
+++ b/FeelFlowAnalysis/appsettings.json
@@ -1,29 +1,31 @@
 {
-  "AllowedHosts": "*",
-  "ApiSettings": {
-    "ApiUrl": "http://127.0.0.1:8000",
-    "Analyze": "/analyze",
-    "Metadata": "/metadata",
-    "Verify": "/verify"
-  },
-  "EncryptionSettings": {
-    "EncryptionKey": "7wt1dKUHAqe+KBA5sA6O1pgD5uN65EOIC8F54vE0Abs=",
-    "InitializationVector": "cy/U1sSrODwfEWpe4D6gPw=="
-  },
-  "DbSettings": {
-    "ConnectionString": "mongodb+srv://morgun2282:c8vnCi2tw5kRbA30@feelflowdb.kl6d8vi.mongodb.net/",
-    "DatabaseName": "FeelFlowDb",
-    "UsersCollectionName": "Users"
-  },
-  "HashingSettings": {
-    "SaltSize": 16,
-    "HashSize": 32,
-    "Iterations": 10000
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  }
+	"AllowedHosts": "*",
+	"Logging": {
+		"LogLevel": {
+			"Default": "Information",
+			"Microsoft.AspNetCore": "Warning"
+		}
+	},
+	"Settings": {
+		"Api": {
+			"BaseUrl": "http://127.0.0.1:8000",
+			"Analyze": "/analyze",
+			"Metadata": "/metadata",
+			"Verify": "/verify"
+		},
+		"Database": {
+			"ConnectionString": "mongodb+srv://morgun2282:c8vnCi2tw5kRbA30@feelflowdb.kl6d8vi.mongodb.net/",
+			"Name": "FeelFlowDb",
+			"UsersCollectionName": "Users"
+		},
+		"Encryption": {
+			"EncryptionKey": "7wt1dKUHAqe+KBA5sA6O1pgD5uN65EOIC8F54vE0Abs=",
+			"InitializationVector": "cy/U1sSrODwfEWpe4D6gPw=="
+		},
+		"Hashing": {
+			"SaltSize": 16,
+			"HashSize": 32,
+			"Iterations": 10000
+		}
+	}
 }
